--- a/ArchiveExtract/packages.config
+++ b/ArchiveExtract/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="sharpcompress" version="0.9" targetFramework="net40" />
 </packages>
